2025-10-14  Michael Albinus  <michael.albinus@gmx.de>

	Do not use the ;;;###tramp-autoload cookie for defcustoms.  This
	damages the customisation when Tramp is autoloaded.  Reported by
	Joel Reicher <joel.reicher@gmail.com>.

	* tramp-cache.el (tramp-verbose): Declare.
	(tramp-connection-properties):
	* tramp-message.el (tramp-verbose):
	Remove ;;;###tramp-autoload cookie.

2025-10-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-make-tramp-file-name): Do not use the hop for
	the "archive" method.

2025-10-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive.el (tramp-archive-file-name-handler): Move bindings
	of `tramp-methods' and `tramp-gvfs-methods' up.
	(tramp-archive-file-name-handler): Do not use
	`tramp-archive-run-real-handler' for testing existence of
	`archive'.  (Bug#79582)

2025-10-01  Renato Ferreira  <renatofdds@gmail.com>  (tiny change)

	* tramp.el (tramp-process-running-p): Use 'compare-strings'
	for matching PROCESS-NAME with process command.  (Bug#79545)

2025-09-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0.3 released

2025-09-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-cache): Require at bottom.

2025-09-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-register-foreign-file-name-handler):
	* tramp-fuse.el (tramp-fuse-handle-directory-files): Use `seq-union'.

	* tramp.el (tramp-use-absolute-autoload-file-names)
	(tramp-skeleton-file-name-all-completions)
	(tramp-parse-auth-sources, tramp-parse-file, tramp-parse-netrc):
	* tramp-cache.el (tramp-parse-connection-properties):
	* tramp-gvfs.el (tramp-gvfs-parse-device-names):
	* tramp-sh.el (tramp-sh-handle-insert-directory): Use `seq-uniq'.

2025-09-12  Liu Hui  <liuhui1610@gmail.com>

	* tramp.el (tramp-local-environment-variable-p):
	New function.  (Bug#79413)
	(tramp-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process)
	(tramp-sh-handle-process-file):